blog buttons js done

--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -186,6 +186,14 @@
             </section>
         
         </main>
+
+        <!--<button id="toTopBtn" title="Go to top">↑ Top</button>-->
+        <button id="toTopBtn" title="Back to Top"><i class="fa-solid fa-arrow-up"></i></button>
+        <script src="../Scripts/main.js"></script>
+        <script src="blog.js"></script>
+            
+
+
     <footer>
         <p class="footer">
             <a href="mailto:2750697@students.wits.ac.za">
