--- a/Blogs/blog_week_5.html
+++ b/Blogs/blog_week_5.html
@@ -154,16 +154,24 @@
                 </div>
             </article>
             <section>
-                <nav class="Sub-Nav">
-                    <ul>
-                    <li><a href="designs.html">Designs</a></li>
-                    <li><a class="active">Style Guide</a></li>
-                    <li><a href="design_week_6.html">Style Guide(pt.2)</a></li>
-                    <li><a href="designs_web_style_group_project.html">Group Project</a></li>
-                    <li><a href="designs_wireframe.html">Wireframes</a></li>
-                    </ul>
-                </nav>
-                </section>
+                        <nav class="Sub-Nav">
+                            <ul>
+                            <li><a href="blog.html">Blogs</a></li>
+                            <li><a href="blog_week_1.html">1</a></li>
+                            <li><a href="blog_week_2.html">2</a></li>
+                            <li><a href="blog_week_3.html">3</a></li>
+                            <li><a href="blog_week_4.html">4</a></li>
+                            <li><a class="active">5</a></li>
+                            <li><a href="blog_week_6.html">6</a></li>
+                            <li><a href="blog_week_7.html">7</a></li>
+                            <li><a href="blog_week_9.html">8</a></li> <!--We didn't have a week 8 blog post-->
+                            <li><a href="blog_week_10.html">9</a></li>
+                            <li><a href="blog_week_11.html">12</a></li>
+                            <li><a href="blog_week_12.html">13</a></li>
+                            <li><a href="blog_week_13.html">14</a></li>
+                            </ul>
+                        </nav>
+                    </section>
         </main>
         
         <!--<button id="toTopBtn" title="Go to top">↑ Top</button>-->
