--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -173,7 +173,7 @@
                     <button id="nextBtn">→</button>
                 </div>
             <script src="../Scripts/main.js"></script>
-            <script src="../Blogs/blog.js"></script>
+            <script src="designs.js"></script>
         
         <footer>
             <p class="footer">
