--- a/Designs/designs_web_style_group_project.html
+++ b/Designs/designs_web_style_group_project.html
@@ -86,6 +86,14 @@
             </section>
         </main>
 
+        <!--<button id="toTopBtn" title="Go to top">↑ Top</button>-->
+            <button id="toTopBtn" title="Back to Top"><i class="fa-solid fa-arrow-up"></i></button>
+            <div class="blog-nav">
+                    <button id="prevBtn">←</button>
+                    <button id="nextBtn">→</button>
+                </div>
+            <script src="../Scripts/main.js"></script>
+            <script src="designs.js"></script>
         
         <footer>
             <p class="footer">
