--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -191,6 +191,11 @@
 
             
         </main>
+
+        <!--<button id="toTopBtn" title="Go to top">↑ Top</button>-->
+        <button id="toTopBtn" title="Back to Top"><i class="fa-solid fa-arrow-up"></i></button>
+        <script src="../Scripts/main.js"></script>
+        <script src="essay.js"></script>
         
         <footer>
             <p class="footer">
