Page transition Designs (5-6)

--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -233,5 +233,8 @@
 
             <p>Brought to you by Amina Moosa</p>
         </footer>
+        <div id="transitionOverlay">
+            <h1 class="hud-text">Loading...</h1>
+        </div> <!--This is supposed to be called at the end of the page-->
     </body>
 </html>
