--- a/Blogs/blog_week_13.html
+++ b/Blogs/blog_week_13.html
@@ -6,12 +6,11 @@
         <title>Blog Week 13</title>
         <meta name="author" content="Amina Moosa">
         <meta name="description" content="Blog week 13 looking at ethical internet, more specifically Orgad - The internet as a moral space the legacy of Roger Silverstone - 2007">
+        <link rel="stylesheet" href="../normalize.css"/>
+        <link rel="stylesheet" href="../Styles/main.css"/>
         <link rel="stylesheet" href="blog.css">
 
         <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
-        <link rel="stylesheet" href="../normalize.css"/>
-        <link rel="stylesheet" href="../Styles/main.css"/>
-    
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400..700&family=Iansui&family=Londrina+Sketch&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Share+Tech+Mono&family=Tangerine:wght@400;700&family=Updock&display=swap" rel="stylesheet">
@@ -204,5 +203,28 @@
     
                 <p>Brought to you by Amina Moosa</p>
             </footer>
+
+            <div id="transitionOverlay"> <!--This is supposed to be called at the end of the page-->
+            <div class="hud-circle">
+                <div class="outer-ring"></div>
+                <div class="inner-ring"></div>
+                <!--<h3 class="hud-text">Loading...</h3>--><!--This is supposed to be in the middle of my arc reactor (Iron Man's heart)-->
+                <div class="radar-ring"></div>
+                <div class="core-glow"></div>
+
+                <svg class="scanner-ring" viewBox="0 0 100 100"> <!--Scalable vector graph used to draw shapes and graphics-->
+                    <defs>
+                    <linearGradient id="sweepGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                        <stop offset="0%" stop-color="rgba(0,255,255,0)" />
+                        <stop offset="50%" stop-color="rgba(0,255,255,0.5)" />
+                        <stop offset="100%" stop-color="rgba(0,255,255,0)" />
+                    </linearGradient>
+                    </defs>
+                    <circle cx="50" cy="50" r="45" stroke="url(#sweepGradient)" stroke-width="3" fill="none" />
+                </svg>
+            </div>
+             <div class="hud-text">SYSTEM LINK ESTABLISHED</div>
+        </div>
+
     </body>
 </html>
