--- a/Essays/essay_1.html
+++ b/Essays/essay_1.html
@@ -299,7 +299,7 @@
 
         <div class="radar-container">
 
-        <!-- Glowing Ring -->
+        <!-- Glowing Ring (doens't work, it just stays visible in the left corner of the page the whole time)
         <svg class="scanner-ring" viewBox="0 0 100 100">
             <defs>
             <linearGradient id="sweepGradient" x1="0%" y1="0%" x2="100%" y2="0%">
@@ -311,10 +311,12 @@
             <circle cx="50" cy="50" r="45" stroke="url(#sweepGradient)" stroke-width="3" fill="none" />
         </svg>
 
-        <!-- Beam + Trail -->
+         Beam + Trail 
         <svg class="beam-layer" viewBox="0 0 100 100">
-            <!-- Dynamic content will go here -->
-  </svg>
+             Dynamic content will go here 
+        </svg>
+        -->
+        
         </div>
 
     </body>
