--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -6,11 +6,12 @@
     <title>Profile</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Profile containing information about me and contact information">
+    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="profile.css">
 
     <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
-    <link rel="stylesheet" href="../normalize.css"/>
-    <link rel="stylesheet" href="../Styles/main.css"/>
+    
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,6 +64,60 @@
                     Hey, I'm Amina Moosa- A 3rd year Digital Arts student at Wits, diving deep
                     into the worlds of Game Design and Interactive Media. 
                     This site is where my worlds come to life. Stick around- I'm just getting started.
+                </p>
+
+                <p>
+                    <!--Add skills here-->
+                    <section id="skills-jarvis" class="jarvis-panel">
+                        <h2 class="jarvis-heading">Software Skills</h2>
+                        <div class="skill-grid">
+                            <div class="skill-card">
+                                <span class="skill-name">Unity</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">Blender</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">HTML</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">CSS</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">JS</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">Krita</span>
+                            </div>
+                        </div>
+                    </section>
+                </p>
+
+                                <p>
+                    <!--Add Areas of Focus here-->
+                    <section id="skills-jarvis" class="jarvis-panel">
+                        <h2 class="jarvis-heading">Areas of Focus</h2>
+                        <div class="skill-grid">
+                            <div class="skill-card">
+                                <span class="skill-name">Programming</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">Level/ Environmental Design</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">UI Design</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">Sound Design</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">Illustration</span>
+                            </div>
+                            <div class="skill-card">
+                                <span class="skill-name">Front-End Dev</span>
+                            </div>
+                        </div>
+                    </section>
                 </p>
 
             </article>
