--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -117,7 +117,7 @@
                 </div>
             </article>
         
-                <section>
+                <section class="Sub-Nav-Container">
                     <nav class="Sub-Nav">
                         <ul>
                         <li><a href="blog.html">Blogs</a></li>
@@ -136,7 +136,7 @@
                         </ul>
                     </nav>
                     </section>
-                    
+                </div>
             </main>
 
             <!--<button id="toTopBtn" title="Go to top">↑ Top</button>-->
