--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -48,7 +48,7 @@
                             Research for my Design Section of the website, including but not limited to the documentation of my IxD process, style process documentation, 
                                 and style guide mapping.
 
-                            <a href="design_week_5.html" class="view-more">View More...</a>
+                            <a href="design_week_5.html" class="view-more readmore-btn">View More...</a>
                         </p>
                     </div>
 
@@ -57,7 +57,7 @@
                         <p>
                             Adding more to the Design Section of the website such as the style guide and wireframe
                             
-                            <a href="design_week_6.html" class="view-more">View More...</a>
+                            <a href="design_week_6.html" class="view-more readmore-btn">View More...</a>
                         </p>
                     </div>
 
@@ -65,7 +65,7 @@
                     <h2 class="p-name">Group Project</h2>
                         <p>
                             A group project where we were given a company and a style guide to create for them<br>
-                            <a href="designs_web_style_group_project.html" class="view-more">View More...</a>
+                            <a href="designs_web_style_group_project.html" class="view-more readmore-btn">View More...</a>
                         </p>
                     </div>
 
@@ -73,7 +73,7 @@
                     <h2 class="p-name">Initial Wireframes</h2>
                         <p>
                             Initial wireframes for this portfolio website<br>
-                            <a class="view-more" href="designs_wireframe.html">View More...</a>
+                            <a class="view-more readmore-btn" href="designs_wireframe.html">View More...</a>
                         </p>
                     </div>
                 
