--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -48,7 +48,7 @@
                         of the interaction design can be deliberated since the way users interact with websites is
                         largely shaped by the principles of UI/UX design. These elements not only determine how
                         information is presented...<br>
-                        <a href="essay_1.html" class="view-more">Read More...</a> <br>
+                        <a href="essay_1.html" class="view-more readmore-btn">Read More...</a> <br>
                     </p>
             </div>
             
@@ -56,7 +56,7 @@
             <h2 class="p-name">Essay 2</h2>
                     <p class="p-summary">
                         Coming soon! Stay Tuned!
-                        <a href="essay_2.html" class="view-more">Read More...</a> <br>
+                        <a href="essay_2.html" class="view-more readmore-btn">Read More...</a> <br>
                     </p>
             </div>
 
