--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -77,25 +77,25 @@
                     Design Process: The first iteration of my web-style guide is as follows:
                     The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
                     This is translated through the main colour palette and the fonts <cite>(Elementor, 2020)</cite>.
-                    There are ideas and variations for some aspects in the style-guide...
+                    There are ideas and variations for some aspects in the style-guide...<br>
                     <a href="blog_week_4.html" class="view-more readmore-btn">Read More...</a>
                 </p>
             </div>
 
             <div class="blog-card">
             <h2 class="p-name">Style Guide Mapping</h2>
-                <p>
+                <p class="p-summary">
                     Research for my Design Section of the website, including but not limited to the documentation of my IxD process, 
-                    style process documentation, and style guide mapping
-                    <a href="../Designs/design_week_5.html" class="view-more readmore-btn">View More...</a>
+                    style process documentation, and style guide mapping <br>
+                    <a href="../Designs/design_week_5.html" class="view-more readmore-btn">Read More...</a>
                 </p>
             </div>
 
             <div class="blog-card">
             <h2 class="p-name">Ethics of UX Practice (Design Section)</h2>           
-                <p>
-                    Adding more to the Design Section of the website such as the style guide or wireframes
-                    <a href="../Designs/design_week_6.html" class="view-more readmore-btn" >View More...</a>
+                <p class="p-summary">
+                    Adding more to the Design Section of the website such as the style guide or wireframes <br>
+                    <a href="../Designs/design_week_6.html" class="view-more readmore-btn" >Read More...</a>
                 </p>
             </div>
 
