--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -44,9 +44,9 @@
 
                     <div class="blog-card">
                     <h2 class="p-name">Style Guide</h2>
-                        <p>
+                        <p class="p-summary">
                             Research for my Design Section of the website, including but not limited to the documentation of my IxD process, style process documentation, 
-                                and style guide mapping.
+                                and style guide mapping. <br>
 
                             <a href="design_week_5.html" class="view-more readmore-btn">View More...</a>
                         </p>
@@ -54,8 +54,8 @@
 
                     <div class="blog-card">
                     <h2 class="p-name">Style Guide (part 2)</h2>
-                        <p>
-                            Adding more to the Design Section of the website such as the style guide and wireframe
+                        <p class="p-summary">
+                            Adding more to the Design Section of the website such as the style guide and wireframe <br>
                             
                             <a href="design_week_6.html" class="view-more readmore-btn">View More...</a>
                         </p>
@@ -63,7 +63,7 @@
 
                     <div class="blog-card">
                     <h2 class="p-name">Group Project</h2>
-                        <p>
+                        <p class="p-summary">
                             A group project where we were given a company and a style guide to create for them<br>
                             <a href="designs_web_style_group_project.html" class="view-more readmore-btn">View More...</a>
                         </p>
@@ -71,7 +71,7 @@
 
                     <div class="blog-card">
                     <h2 class="p-name">Initial Wireframes</h2>
-                        <p>
+                        <p class="p-summary">
                             Initial wireframes for this portfolio website<br>
                             <a class="view-more readmore-btn" href="designs_wireframe.html">View More...</a>
                         </p>
