--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -55,7 +55,7 @@
             <div class="blog-card">
             <h2 class="p-name">Essay 2</h2>
                     <p class="p-summary">
-                        Coming soon! Stay Tuned!
+                        Coming soon! Stay Tuned!<br>
                         <a href="essay_2.html" class="view-more readmore-btn">Read More...</a> <br>
                     </p>
             </div>
