Designs.html update

--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -51,6 +51,8 @@
                         and tutors for this course, and the imaginary user that comes to visit the portfolio. Visitors would entail people 
                         such as collaborators, and any industry professionals. The users should be able to interact/see displayed projects 
                         and reach out to me. <cite>(Moritz Prätorius, 2024)</cite><br>
+                        As I've iterated this project, I've realized that another goal is to possibly build 
+                        a personal brand through the stylized elements and theme.
                     </p>
 
                     <p>
@@ -68,9 +70,15 @@
                         <cite>(Alvaro Trigo\'s Blog, 2022)</cite><br>
 
                         <figure>
-                            <figcaption>Infomation contnt and how folders are structured</figcaption>
+                            <figcaption>Infomation content and how folders are structured</figcaption>
                             <img class="img-design" src="../Images/Designs/Week_5/blog_5_information_content.png" alt="Information content and how folders are structured">
                         </figure>
+
+                        <figure>
+                            <figcaption>Infomation content and how folders are structured</figcaption>
+                            <img class="img-design" src="../Images/Designs/Week_5/blog_5_information_content_2.png" alt="Information content in the form of a table. Talks about each page section and their purpose">
+                        </figure>
+
                     </p>
                         
                     <p>
@@ -79,6 +87,29 @@
                             <figcaption>User Flow experience annotated</figcaption>
                             <img class="u-photo user-experience-flow img-design"src="../Images/Designs/Week_5/blog_5_information_user_experience.png" alt="User flow experience annotated">
                         </figure>
+
+                        Screens / Pages:
+                        Landing page → nav menu → interior pages (Projects, Blog, About)
+
+                    </p>
+
+                    <p>                
+                        <h3 class="p-name">User Behaviour:</h3>
+                        Likely to scan homepage quickly, then choose to explore deeper based on visual appeal or keywords.
+                        On blog pages, scroll depth will depend on readability and content relevance — the "Back to Top" button reinforces long-form navigation.
+                        Users will expect consistency in UI interactions (e.g. how transitions behave across different sections).
+                    </p>
+
+                    <p>                
+                        <h3 class="p-name">User Decisions:</h3>
+                        Explore a project or read a blog post
+                        Return via nav or back button
+                        Contact you or leave — depending on how impressed/informed they are by your presentation
+                    </p>
+
+                    <p>                
+                        <h3 class="p-name">Aesthetic Goal</h3>
+                        The Jarvis-style transitions suggest you’re optimizing for engagement and immersion during those decision moments.
                     </p>
 
                     <p>
