--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -67,6 +67,21 @@
                     </p>
 
                     <p>
+                        Jarvis aesthetic for loading page inspiration:
+                        <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/blog_week_6_jarvis_1.jpg" alt="Jarvis loading screen inspiration">
+                                <figcaption>Image from (Wallpapers.com, 2023)</figcaption>
+                        </figure>
+
+                        Jarvis aesthetic for HUD display inspiration:
+                        <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/blog_week_6_jarvis_2.jpeg" alt="Jarvis HUD display inspiration">
+                                <figcaption>Blur Image from (Dixit, 2023)</figcaption>
+                        </figure>
+                        
+                    </p>
+
+                    <p>
                         <h2>Colour Swatches:</h2>
                         <!--Image of colour swatches-->
                         <p>
