Designs.html wireframes
Wireframes update

--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -72,6 +72,20 @@
                         </figure>
                     </p>
 
+                    <p>
+                        <h3>Final design Sketches with JS implementation:</h3>
+                        <figure> 
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1js.png" alt="Wireframe final design sketches, home page with avatar of me on left hand side, and ladning page text to the right of image">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2js.png" alt="Wireframe final design sketches , blog main page with blog cards in a flex box">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3js.png" alt="Wireframe final design sketches, blog page with blog entry. Blog text in the middle of the page">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_4js.png" alt="Wireframe final design sketches, Essays home page, with two essay blog cards">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_5js.png" alt="Wireframe final design sketches, Essay entry page with essay text centred">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_6js.png" alt="Wireframe final design sketches, Designs home page with blog cards of design sections">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_7js.png" alt="Wireframe final design sketches, design entry page">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_8js.png" alt="Wireframe final design sketches, profile page with avatar of me to the left of the screen and text with me to the right of the screen">
+                        </figure>
+                    </p>
+
                     <a href="#" class="to-top">To the Top</a>
                 </div>
             </div>
