--- a/Portfolio/game_analysis_2.html
+++ b/Portfolio/game_analysis_2.html
@@ -46,18 +46,18 @@
                     
 
                     <p>
-                        Phasmophobia (2020) is an Indie horror game developed by Kinetic Games. Moving beyond
+                        <cite>Phasmophobia (2020)</cite> is an Indie horror game developed by Kinetic Games. Moving beyond
                         traditional jump scares, Phasmophobia is an immersive experience that is more
                         psychologically driven. This shift is exemplified by placing the players in the role of
                         paranormal investigators tasked with identifying various types of ghosts in haunted locations.
                         What sets Phasmophobia apart is its innovative use of cooperative multiplayer mechanics,
                         environmental storytelling, and voice recognition technology to create an atmosphere of
-                        sustained dread. As Jose P. Zagal (2010) says, “to better understand a game it is important to
+                        sustained dread. As <cite>Jose P. Zagal (2010)</cite> says, <q>to better understand a game it is important to
                         understanding its components, how they interact, and how they facilitate certain experiences
-                        in players” (Zagal, 2010, p.33). This essay explores how Phasmophobia leverages audio
+                        in players</q> <cite>(Zagal, 2010, p.33)</cite>. This essay explores how Phasmophobia leverages audio
                         design and gameplay that comes from unexpected and unscripted situations to craft a
-                        uniquely unsettling experience that redefines fear in games using the “Ludoliteracy” lens by
-                        Zagal (2010).
+                        uniquely unsettling experience that redefines fear in games using the <q>Ludoliteracy</q> lens by
+                        <cite>Zagal (2010)</cite>.
                     </p>
 
                     <p>
@@ -80,11 +80,11 @@
 
                         <figure>
                             <img class=" img-essay" src="../Images/Portfolio/Game_Analysis/phasmophobia_1.jpg" alt="Screenshot of gameplay showing equiptment on the floor. Equipment such as torch, EMF reader, DOTs Projector, tripod">
-                            <figcaption>Image are from (Grantham, 2024). Images showcasing equipment</figcaption>
+                            <figcaption>Image are from <cite>(Grantham, 2024)</cite>. Images showcasing equipment</figcaption>
                         </figure> 
                         <figure>
                             <img class=" img-essay" src="../Images/Portfolio/Game_Analysis/phasmophobia_2.jpg" alt="Screenshot of gameplay showing equiptment on the floor and a camera in player's hand. Equipment such as DOTs projector, tripod.">
-                            <figcaption>Image are from (Grantham, 2024). Images showcasing equipment</figcaption>
+                            <figcaption>Image are from <cite>(Grantham, 2024)</cite>. Images showcasing equipment</figcaption>
                         </figure>
                     </p>
 
@@ -144,9 +144,9 @@
                     </p>
 
                     <p>
-                       According to Zagal, “In addition to being able to pick out elements of a game’s design, it is
+                       According to <cite>Zagal</cite>, <q>In addition to being able to pick out elements of a game’s design, it is
                         important to understand how the interaction between these elements helps create a certain
-                        experience for the player”(Zagal, 2010, p.33). Phasmophobia balances the game interactions
+                        experience for the player</q> <cite>(Zagal, 2010, p.33)</cite>. Phasmophobia balances the game interactions
                         with proximity-based voice chat that adds realism and immersion. This means that players
                         can hear each other only when they are close, with radios often cutting out during hunts,
                         emphasising isolation and vulnerability. This is also shown when ghosts can whisper or
@@ -154,7 +154,7 @@
                         to the game's theme of creating intimate, terrifying moments that leverage spatial audio to
                         maximise fear. Phasmophobia creates Ludoliteracy by combining the aforementioned with
                         the core gameplay mechanic (emergent gameplay) to create player experience and
-                        engagement within the game (Zagal, 2010, p.17).
+                        engagement within the game <cite>(Zagal, 2010, p.17)</cite>.
  
                     </p>
 
@@ -199,10 +199,10 @@
                     </p>
 
                     <p>
-                        This creates a unique horror experience for the player. As reported by Zagal, “to understand a
+                        This creates a unique horror experience for the player. As reported by <cite>Zagal</cite>, <q>to understand a
                         game, it is often important to understand its context with relation to other games as well as
-                        gaming conventions and mechanics that might be common across multiple genres” (Zagal,
-                        2010, p.31). Survival horror is characterised by hostile environments, limited resources and
+                        gaming conventions and mechanics that might be common across multiple genres</q> <cite>(Zagal,
+                        2010, p.31)</cite>. Survival horror is characterised by hostile environments, limited resources and
                         atmosphere and sound design. Phasmophobia follows these conventions while also following
                         a sub-genre of psychological horror (fear of the uncertain/unseen) and puzzle elements
                         (gather clues and identify the ghost type). However, it diverges in the sense that, unlike most
