--- a/Portfolio/game_analysis_3.html
+++ b/Portfolio/game_analysis_3.html
@@ -41,18 +41,18 @@
                 <article class="h-entry e-content">
         
                     <p>
-                        In an industry saturated with single-player narratives and online multiplayer experiences, It
-                        Takes Two (2021) stands out as a textbook example in cooperative gameplay and imaginative
+                        In an industry saturated with single-player narratives and online multiplayer experiences, <cite>It
+                        Takes Two (2021)</cite> stands out as a textbook example in cooperative gameplay and imaginative
                         level design. Developed by Hazelight Studios, the game is built entirely around the concept
                         of two players working in tandem, both narratively and mechanically. Rather than treating
                         co-op as an optional mode, It Takes Two integrates collaboration as a core design philosophy,
                         creating gameplay moments that are impossible to overcome alone. As Jose P. Zagal (2010)
-                        mentions, “to better understand a game it is important to understanding its components, how
-                        they interact, and how they facilitate certain experiences in players” (Zagal, 2010, p.33). This
+                        mentions, <q>to better understand a game it is important to understanding its components, how
+                        they interact, and how they facilitate certain experiences in players</q> <cite>(Zagal, 2010, p.33)</cite>. This
                         essay explores how the game’s narrative and mechanics are tightly interwoven, emphasising
                         the importance of collaboration and communication within relationships. This will be
-                        illustrated by focusing on Chapter 1 of the game (“The Shed”) and by using Zagal’s
-                        “Ludoliteracy” lens (Zagal, 2010).
+                        illustrated by focusing on Chapter 1 of the game (“The Shed”) and by using <cite>Zagal</cite>’s
+                        <q>Ludoliteracy</q> lens <cite>(Zagal, 2010)</cite>.
                     </p>
 
                     <p>
@@ -130,10 +130,10 @@
                        The above-mentioned core mechanics all include elements that intertwine with collaboration.
                         This includes the synchronised actions such as the puzzles that require precise timing and
                         communication, obstacles that require both players to perform unique complementary actions
-                        and tool-based abilities. This is a good point to bring up a point Zagal makes, “In addition to
+                        and tool-based abilities. This is a good point to bring up a point <cite>Zagal</cite> makes, <q>In addition to
                         being able to pick out elements of a game’s design, it is important to understand how the
-                        interaction between these elements helps create a certain experience for the player”(Zagal,
-                        2010, p.33). These mechanics create a dynamic balance of co-operation and communication.
+                        interaction between these elements helps create a certain experience for the player</q> <cite>(Zagal,
+                        2010, p.33)</cite>. These mechanics create a dynamic balance of co-operation and communication.
                     </p>
 
                     <p>
@@ -155,10 +155,10 @@
                     </p>
 
                     <p>
-                        This creates a system that emphasises collaboration. As stated by Zagal, “to understand a
+                        This creates a system that emphasises collaboration. As stated by <cite>Zagal</cite>, <q>to understand a
                         game, it is often important to understand its context with relation to other games as well as
-                        gaming conventions and mechanics that might be common across multiple genres” (Zagal,
-                        2010, p.31). It Takes Two strongly follows the conventions of an action-adventure game with
+                        gaming conventions and mechanics that might be common across multiple genres</q> <cite>(Zagal,
+                        2010, p.31)</cite>. It Takes Two strongly follows the conventions of an action-adventure game with
                         strong platforming elements while also following the sub-genre of cooperative
                         puzzle-platforming. However, it diverges in the sense that it is purely co-op with varied
                         gameplay within Levels. 
@@ -168,7 +168,7 @@
                         In summary, Chapter 1 of It Takes Two effectively introduces the game’s core theme of
                         collaboration through tightly integrated narrative and gameplay. The asymmetric mechanics
                         and cooperative challenges reflect the emotional tension between Cody and May, turning
-                        their relationship struggles into engaging gameplay. Viewed through Zagal’s lens, the chapter
+                        their relationship struggles into engaging gameplay. Viewed through <cite>Zagal</cite>’s lens, the chapter
                         demonstrates how game elements work together to create a meaningful and reflective co-op
                         experience that sets the tone for the rest of the game.
                     </p>
