--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -217,6 +217,15 @@
                         <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_5.png" alt="Wireframe final design sketches, brainstorming blogs page and blog entry page">
                     </figure>
                 </p>
+
+                <p>
+                    <h3 class="p-name">References</h3>
+                    <ul>
+                        <li>Wallpapers.com. (2023). Download Jarvis, the powerful AI assistant Wallpaper | Wallpapers.com. [online] Available at: <a href="https://wallpapers.com/wallpapers/jarvis-1440-x-1280-wallpaper-4uaygaar3435px12.html" class="u-url"> https://wallpapers.com/wallpapers/jarvis-1440-x-1280-wallpaper-4uaygaar3435px12.html </a>[Accessed 23 May 2025].</li>
+                        <li>Dixit, H. (2023). it’s not as far-fetched as one may think. With the right combination of technologies and platforms, we can create an AI-powered personal assistant. [online] Linkedin.com. Available at: <a href="https://www.linkedin.com/pulse/can-we-create-something-similar-jarvis-friday-using-todays-dixit" class="u-url"> https://www.linkedin.com/pulse/can-we-create-something-similar-jarvis-friday-using-todays-dixit </a>[Accessed 23 May 2025].</li>
+                    </ul>
+                </p>
+
                 <a href="#" class="to-top">To the Top</a>
                 </div>
             </div>
